--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
                 <button type="button">Get Early Access</button>
               </form>
               <div class="download-btns">
-                <a href="">
+                <a
+                  href="https://play.google.com/store/apps/details?id=com.pennysafe.pennytree"
+                >
                   <img
                     src="assets/images/google-play.svg"
                     alt="Google PlayStore Icon"
@@ -192,36 +194,28 @@
           <div class="works">
             <div class="count">1</div>
             <h3>Download app</h3>
-            <p>
-              Elit dolor sit amet, consectetur adipiscing elit. Cum, expedita.
-            </p>
+            <p>Get the PennyTree App from iOS and Play store.</p>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="works">
             <div class="count">2</div>
             <h3>Create an account</h3>
-            <p>
-              Elit dolor sit amet, consectetur adipiscing elit. Cum, expedita.
-            </p>
+            <p>Fill in your details to create an account.</p>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="works">
             <div class="count">3</div>
             <h3>Get Verified</h3>
-            <p>
-              Elit dolor sit amet, consectetur adipiscing elit. Cum, expedita.
-            </p>
+            <p>Follow checklist on your dashboard to get verified.</p>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="works">
             <div class="count">4</div>
             <h3>Enjoy</h3>
-            <p>
-              Elit dolor sit amet, consectetur adipiscing elit. Cum, expedita.
-            </p>
+            <p>Navigate the Penny ecosystem and grow your money.</p>
           </div>
         </div>
       </div>
@@ -369,7 +363,10 @@
         </div>
         <div class="col-lg-5">
           <div class="app-btns">
-            <a href="#" class="app-btn app-btn-one">
+            <a
+              href="https://play.google.com/store/apps/details?id=com.pennysafe.pennytree"
+              class="app-btn app-btn-one"
+            >
               <i class="fab fa-google-play"></i>
               Google Play
             </a>
